Key spacing and text alignment correction

--- a/source/resources/osk/kmwosk.css
+++ b/source/resources/osk/kmwosk.css
@@ -37,21 +37,17 @@
 .phone .kmw-key-layer{position:fixed;left:0;bottom:0;width:100%;height:100%;margin:0;padding:0;background-color:transparent;overflow:hidden;}
 .phone .kmw-key-row {position:fixed;width:100%;height:20%;margin:0;padding:0;border:none;overflow:hidden;}
 .phone .kmw-key-square {position:fixed;display:inline-block;height:100%;max-height:100%;overflow:hidden;margin:0 0 0 0;z-index: 10000;padding:0 0 0 0;background-color:transparent;cursor:default; border:none;-webkit-tap-highlight-color:rgba(0,0,0,0)}
-.phone .kmw-key-square-ex {display:inline-block;box-sizing:border-box;margin:0 0 0 5px;z-index:10001;padding:0;background-color:transparent;cursor:default;}
-.phone .kmw-key {display:block;position:fixed;margin:0px;border-radius:6px;text-align:center;padding-top:0.2em;box-sizing:border-box;overflow:hidden;
+.phone .kmw-key-square-ex {display:inline-block;box-sizing:border-box;margin:0 0 0 5px;z-index:10001;padding:0; background-color:transparent;cursor:default;}
+.phone .kmw-key {display:block;position:fixed;margin:0px;border-radius:6px;text-align:center; box-sizing:border-box; overflow:hidden;
         border:solid 2px #999999;
         box-shadow: 0px -1px 1px 0px rgba(0,0,0,1) inset;
-        min-height: 22px;
         }
  
 .phone.windows .kmw-key-row{max-width:80%;}
 .phone.windows .kmw-key {position:static;}
 
-.phone .kmw-5rows {padding-top:0;}
-.phone .kmw-key-shift,.phone .kmw-key-shift-on {padding-top:0.5em;} 
-.phone .kmw-key-shift.kmw-5rows,.phone .kmw-key-shift-on {padding-top:0.4em;} 
-.phone .kmw-key-label{position:absolute;left:20%;top:2%;font:0.5em Arial;color:#aaa;background-color:transparent;z-index:10000;}
-.phone .kmw-key-text{position:relative;left:0;top:0;}
+.phone .kmw-5rows {padding-top: 0;}
+.phone .kmw-key-label{position:absolute;left:20%;top:2%;font:0.5em Arial;color:#aaa; background-color:transparent;z-index:10000;}
  
 .phone .kmw-key-row {-webkit-touch-callout:none;-webkit-user-select:none;-ms-user-select:none;user-select:none;-webkit-tap-highlight-color:rgba(0,0,0,0);}  
 
@@ -69,9 +65,9 @@
 .tablet .kmw-key-layer-group{position:fixed;left:0;bottom:0;width:100%;margin:0;padding:1px 0;border:none;background-color:#999999;}
 .tablet .kmw-key-layer{position:fixed;left:0;bottom:0;width:100%;height:100%;margin:0;padding:0;background-color:transparent;overflow:hidden;}
 .tablet .kmw-key-row {position:fixed;width:100%;height:20%;margin:0;padding:0;border:none;overflow:hidden;}
-.tablet .kmw-key-square {position:fixed;display:inline-block;height:100%;max-height:100%;overflow:hidden;margin:0 0 0 0;z-index: 10000;padding:0 0 0 0;background-color:transparent;cursor:default; border:none;-webkit-tap-highlight-color:rgba(0,0,0,0)}
-.tablet .kmw-key-square-ex {display:inline-block;box-sizing:border-box;margin:0 0 0 5px;z-index:10001;padding:0;background-color:transparent;cursor:default;}  
-.tablet .kmw-key {display:block;position:fixed;margin:2px;border-radius:8px;text-align:center;padding-top:0.4em;box-sizing:border-box;overflow:hidden;
+.tablet .kmw-key-square {position:fixed; display:inline-block; height:100%; max-height:100%; overflow:hidden; margin:0 0 0 0; z-index: 10000; padding:0 0 0 0; background-color:transparent;cursor:default; border:none;-webkit-tap-highlight-color:rgba(0,0,0,0)}
+.tablet .kmw-key-square-ex {display:inline-block;box-sizing:border-box;margin:0 0 0 5px;z-index:10001; padding:0; background-color:transparent; cursor:default;}  
+.tablet .kmw-key {display:block;position:fixed;margin:2px;border-radius:8px;text-align:center;box-sizing:border-box;overflow:hidden;
         border:solid 2px #999999;
         box-shadow: 0px -1px 1px 0px rgba(0,0,0,1) inset;
  }
@@ -88,6 +84,12 @@
 .tablet.ios .kmw-key.kmw-key-touched {background-color:#88f;}
 
 .tablet .kmw-key-row {-webkit-touch-callout:none;-webkit-user-select:none;-ms-user-select:none;user-select:none;-webkit-tap-highlight-color:rgba(0,0,0,0);}
+ 
+/* Vertical centering of text labels on keys */ 
+.kmw-key {text-align:center; white-space:nowrap;}
+.kmw-key:before {content:'.'; display:inline-block; height:100%; vertical-align:middle; max-width:0px; visibility:hidden;}
+.kmw-key span {display:inline-block; vertical-align:middle;}        
+
         
 .desktop .kmw-osk-frame{position:absolute;width:auto;height:auto;left:0;top:0;display:none;margin:0;padding:0;
           border:2px solid #ad4a28;border-radius:2px;background-color:#666;box-sizing:border-box;-moz-box-sizing:border-box;}
@@ -100,7 +102,6 @@
 .desktop .kmw-key {display:block;margin:0;border-radius:6px;text-align:center;box-sizing:border-box;-moz-box-sizing:border-box;
           overflow:hidden;width:100%;height:100%;}
 .desktop .kmw-key-label{position:absolute;left:2px;top:2px;font:0.5em Arial;color:#888;background-color:transparent;}
-.desktop .kmw-key-text{position:relative;left:2px;top:2px;}
  
 /*  Additional desktop element styles */
 .kmw-footer{height:16px;width:auto;margin:0;padding:0;padding-top:2px;background-color:#ad4a28;border-radius:0 0 6px 6px;}
@@ -131,9 +132,9 @@
 .kmw-key-hidden{visibility:hidden;}
 .kmw-key-touched{background-color:#88f;}
 
-/* Adjust vertical position of images on special keys */
-.tablet .kmw-key-shift, .tablet .kmw-key-shift-on{padding-top:0.5em; font-size:0.8em !important;}
-.phone .kmw-key-shift, .phone .kmw-key-shift-on{padding-top:0.5em; font-size:0.7em !important;}
+/* Adjust font (image) size on special keys */
+.tablet .kmw-key-shift, .tablet .kmw-key-shift-on{font-size:0.8em !important;}
+.phone .kmw-key-shift, .phone .kmw-key-shift-on{font-size:0.7em !important;}
 
 /* Set special font and style for modifier and special key images */  
 body div.kmw-key-shift span.kmw-key-text {font-family:SpecialOSK !important;font-size:1em !important;}
